launchpad-buildd (120) UNRELEASED; urgency=low

  * Unset LANG and LC_ALL rather than setting them to C, and unset a number
    of other environment variables too (including DISPLAY and TERM), in line
    with Debian buildds.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 18 Oct 2013 12:24:00 +0100

launchpad-buildd (119) hardy; urgency=low

  * Mount /dev/pts with -o gid=5,mode=620 to avoid needing pt_chown.

 -- Adam Conrad <adconrad@ubuntu.com>  Thu, 10 Oct 2013 08:56:07 -0600

launchpad-buildd (118) hardy; urgency=low

  [ William Grant ]
  * Fix fallback to PACKAGEFAIL of unknown sbuild DEPFAIL conditions
    (LP: #1235038).

  [ Colin Watson ]
  * Fail the builder immediately if $HOME/.sbuildrc is corrupt
    (LP: #1235287).
  * Add a status_dict XML-RPC method for better extensibility, including
    reporting the python-lpbuildd version (LP: #680514).

 -- William Grant <william.grant@canonical.com>  Tue, 08 Oct 2013 15:09:47 +1100

launchpad-buildd (117) hardy; urgency=low

  * Fix dep-wait detection when recipes fail to install build-dependencies
    (LP: #1234621).
  * Remove *.pyc files from source tree on clean.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 03 Oct 2013 12:43:27 +0100

launchpad-buildd (116) hardy; urgency=low

  [ Colin Watson ]
  * Remove obsolete BuilderStatus.ABORTED.
  * Remove obsolete BuildDSlave.fetchFile method, unused since October 2005.
  * If the expected .changes file doesn't exist, consider this as a package
    build failure rather than crashing (LP: #993642).
  * Don't attempt to read entire files into memory at once when storing them
    in the file cache.
  * Rearrange build log searching to avoid reading the entire build log into
    memory at once (LP: #1227086).

  [ Adam Conrad ]
  * Tidy up log formatting of the "Already reaped..." message. 

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 27 Sep 2013 13:08:59 +0100

launchpad-buildd (115) hardy; urgency=low

  [ Adam Conrad ]