@@ -3,6 +3,7 @@ launchpad-buildd (120) UNRELEASED; urgency=low
   * Unset LANG and LC_ALL rather than setting them to C, and unset a number
     of other environment variables too (including DISPLAY and TERM), in line
     with Debian buildds.
+  * Make the status XML-RPC method a synonym for status_dict.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 18 Oct 2013 12:24:00 +0100
 
